// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-a72af660-1 itdpKw undefined "
  >
    button test
     
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-a72af660-2 krTSGv"
  >
    button test
  </button>
</div>
`;
